--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">611</string>
     <string name="title_activity_track">Map</string>
+    <string name="facebook_app_id">285529335997962</string>
+    <string name="fb_login_protocol_scheme">fb285529335997962</string>
 </resources>
